--- a/css/style.css
+++ b/css/style.css
@@ -10,17 +10,23 @@ COMMON
 body {
     font-family: 'Lato', sans-serif;
     color: white;
+    font-size: 10px;
 }
 
 main {
     width: 100%;
     height: calc(100vh - 100px);
-    background-color: rgb(255, 101, 101);
+    background-color:#0e0e0e;
     display: flex;
     flex-wrap: wrap;
     align-content: flex-start;
     justify-content: center;
     overflow-y: auto;
+    padding-bottom: 20px;
+}
+
+.box-name-person span {
+    font-size: 10px;
 }
 
 i {
@@ -31,8 +37,7 @@ i {
     position: relative;
     height: 100px;
     width: 200px;
-    background-color: wheat;
-    border: solid 5px black;
+    background-image: url(../img/image.jpg);
     margin: 10px 5px 5px 5px;
 }
 
@@ -41,7 +46,7 @@ i {
     bottom: 0;
     left: 0;
     background-color: rgba(0,0,0,0.5);
-    padding: 5px;
+    padding: 1px;
 }
 
 
@@ -49,7 +54,7 @@ i {
 header {
     width: 100%;
     height: 50px;
-    background-color: aquamarine;
+    background-color:#000;
     display: flex;
     justify-content: flex-end;
     align-items: flex-start;
@@ -61,20 +66,21 @@ header {
     padding: 5px;
     margin: 5px;
     border-radius: 5px;
+    font-size: 10px;
 }
 
 
 footer {
     width: 100%;
     height: 50px;
-    background-color: rgb(157, 127, 255);
+    background-color: #222222;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .box-footer {
     display: flex;
-    align-self: center;
 }
 
 .end-meeting {
@@ -85,4 +91,10 @@ footer {
 .end-meeting p { 
     color: #ac261e;
 
+}
+
+.box-icon-name {
+    font-size: 10px;
+    padding: 5px;
+    text-align: center;
 }
