--- a/css/style.css
+++ b/css/style.css
@@ -63,8 +63,8 @@ header {
 
 .box-view {
     background-color: #4a4a4a;
-    padding: 5px;
-    margin: 5px;
+    padding: 1px;
+    margin: 3px;
     border-radius: 5px;
     font-size: 10px;
 }
@@ -76,7 +76,7 @@ footer {
     background-color: #222222;
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
+    
 }
 
 .box-footer {
@@ -97,4 +97,8 @@ footer {
     font-size: 10px;
     padding: 5px;
     text-align: center;
+}
+
+.left {
+    
 }
