--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,12 @@ footer {
     text-align: center;
 }
 
-.left {
-    
+.fa-share-square {
+    color: green;
 }
+
+.down-triangle {
+    align-self: center;
+}
+
+
